Modification of Projects css to correct a display bug on iOS.

--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -81,11 +81,15 @@
 
 .projectsContainer .inactive {
   flex: 1;
+  position: relative;
 }
 
 .projectsContainer .inactive h3 {
-  writing-mode: vertical-lr;
-  transform: rotate(0.5turn);
+  transform: rotate(0.75turn);
+  position: absolute;
+  bottom: 150px;
+  right: -120px;
+  width: 300px;
 }
 
 .projectsContainer .inactive p,
